@@ -28,4 +28,5 @@ AC_CHECK_FUNCS(strerror)
 
 AC_OUTPUT(Makefile
 	  src/Makefile
-	  tests/Makefile)
+	  tests/Makefile
+	  doc/Makefile)
